--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-- name: 'Docker'
+- name: 'docker'
   args: ['build','-t','gcr.io/$PROJECT_ID/gcpdevops','.']
 images:
 - 'gcr.io/$PROJECT_ID/gcpdevops'
