--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
 - name: 'docker'
-  args: ['build','-t','docker-repo/$PROJECT_ID/gcpdevops','.']
+  args: ['build','-t','gcr.io/$PROJECT_ID/gcpdevops','.']
 images:
-- 'docker-repo/$PROJECT_ID/gcpdevops'
+- 'gcr.io/$PROJECT_ID/gcpdevops'
   # build the container image
 # - name: "gcr.io/cloud-build/docker"
 #   args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops", "."]
