--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,14 @@
 steps:
-- name: 'docker'
-  args: ['build','-t','gcr.io/$PROJECT_ID/gcpdevops','.']
-images:
-- 'gcr.io/$PROJECT_ID/gcpdevops'
+# - name: 'docker'
+#   args: ['build','-t','gcr.io/$PROJECT_ID/gcpdevops','.']
+# images:
+# - 'gcr.io/$PROJECT_ID/gcpdevops'
   # build the container image
-# - name: "gcr.io/cloud-build/docker"
-#   args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops", "."]
-#   # push container image
-# - name: "gcr.io/cloud-builders/docker"
-#   args: ["push", "gcr.io/$PROJECT_ID/gcpdevops"]
+- name: "gcr.io/cloud-build/docker"
+  args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops", "."]
+  # push container image
+- name: "gcr.io/cloud-builders/docker"
+  args: ["push", "gcr.io/$PROJECT_ID/gcpdevops"]
 #   # deploy container image to GKE
 # - name: "gcr.io/cloud-builders/gke-deploy"
 #   args:
