--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
 # images:
 # - 'gcr.io/$PROJECT_ID/gcpdevops'
   # build the container image
-- name: "gcr.io/cloud-build/docker"
+- name: "gcr.io/cloud-builders/docker"
   args: ["build", "-t", "gcr.io/$PROJECT_ID/gcpdevops", "."]
   # push container image
 - name: "gcr.io/cloud-builders/docker"
