--- a/gke.yaml
+++ b/gke.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: gcp-devops-gke
-        image: gcr.io/gcpdevops:latest
+        image: gcr.io/learning-415609/gcpdevops:latest
         ports:
         - containerPort: 5000
         env:
